# An-Algorithm-Library

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  algorithm.hpp  appveyor.yml
.github/workflows/: action.yml
src/: CMakeLists.txt
src/aal/: algorithm.hpp
tests/: CMakeLists.txt  algorithm_test.cpp
tests/cmake/: add_test_common.cmake  clang_compat.cmake  compiler_warnings.cmake  ut.cmake
tests/src/: algorithm_test.cpp
